--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+     "start": "node server.js"
+   
   },
   "keywords": [],
   "author": "",
